# cgaows

./: CMakeLists.txt  LICENSE  README.txt
examples/neon/: Ne_test.cpp  Ne_test.hpp  bf_coeff.txt  cusp_a0_mat.txt  cusp_coeff_mat.txt  example_Ne.cpp  input.py  n_vec.txt  output.txt  output_test_cusp_params.txt  proj_mat.txt  test_cusp_params.py
examples/neon/test_data/: bf_exp.txt  bf_type.txt  cusp_radii_mat.txt
src/: __init__.py.in  basis_set_info.py  cusped_gaussians.cpp  cusped_gaussians.hpp  cusped_orbitals.py  integrand_at_rtp.py
